--- a/style.css
+++ b/style.css
@@ -117,19 +117,24 @@ nav a {
 }
 */
 
+section {
+    padding: 15px;
+}
+
 h2 {
     font-family: 'Kavoon', Times, serif;
     font-size: 2em;
     color: var(--white);
-    padding: 15px;
+    padding-bottom: 10px;
+    /* padding: 15px; */
 }
 
 h3 {
     font-size: 1.5em;
     color: var(--yellow);
     font-weight: bold;
-    padding-bottom: 15px;
-    padding-left: 15px;
+    padding-bottom: 10px;
+    /* padding-left: 15px; */
 }
 
 h4 {
@@ -147,7 +152,7 @@ p {
     background-color: var(--white);
     padding: 20px;
     margin: 0 20px 20px 20px;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 #why-choose-us {
@@ -158,12 +163,15 @@ p {
     display: grid;
     grid-template-columns: repeat(2,1fr);
     gap: 15px;
+    /*
     padding: 0 15px 15px;
+    */
+    padding: 5px;
 }
 
 #why-choose-us li {
     padding: 35px;
-    border-radius: 10px;
+    border-radius: 15px;
     text-align: center;
     font-weight: bold;
 }
@@ -202,15 +210,39 @@ td {
 }
 
 #take-the-first-step {
+    background-color: var(--pink);
     color: var(--white);
 }
 
+/*
+#take-the-first-step p {
+    padding: 0 15px;
+}
+*/
+
 #take-the-first-step a {
+    display: block;
+    text-align: center;
     background-color: var(--white);
     padding: 20px;
+   /* margin: 0 20px; */
+    margin: 20px auto;
+    box-shadow: 5px 5px 3px var(--dark-gray);
+    border-radius: 15px;
+    text-decoration: none;
+    color: var(--dark-gray);
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 footer {
-    background-color: var(--pink);
+    color: var(--white);
+    padding: 50px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    /* gap: 15px; */
+}
+
+footer a {
     color: var(--white);
 }
