--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* CSS BY (add your name) */
+/* CSS BY Aleasha Green */
 
 /* IMPORTED FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kavoon&display=swap');
